--- a/04gy_cpp/04gy_cpp.tex
+++ b/04gy_cpp/04gy_cpp.tex
@@ -102,7 +102,8 @@
 	\end{center}
 	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
 	
-	\section{Tömbök.}
+	\section{Tömbök}
+	Próbáljunk meg egy tömböt érték szerint átadni egy függvénynek!
 	\begin{lstlisting}
 #include <iostream>
 
@@ -118,24 +119,29 @@ int main()
 	f(t);
 }
 	\end{lstlisting}
-	Ez a kód le fog fordulni, előző esetben (ezen az implementáción) először 20at, utána 8at ír ki. Az fog történni, hogy a \texttt{t} a függvényben átkonvertálódik mutatóvá, és ezen az implementáción a mutató mérete 8.
+	Kimenet: \texttt{20 8} (ezen az implementáción)
+	
+	A \texttt{sizeof} operátor megadja a paraméterként megadott típus, vagy objektum esetében annak típusának méretét (bővebben később). Ez minden implementációra specifikus. Bár mindkétszer azt hittünk hogy \texttt{t} tömb által foglal méretét írattuk ki, és azt várnánk hogy a két szám ugyanaz lesz, a valóságban amikor azt érték szerint megpróbáljuk átadni, a \texttt{t} tömb átkonvertálódik a tömb elejére mutató pointerré.
 	\begin{lstlisting}
 void f(int t[8])
 {
 	std::cout << sizeof(t) << std::endl;
 }
 	\end{lstlisting}
-	Ebben az esetben még mindig 8 lesz a második kiírt szám. Az a tanulság, hogy ha tömbméretet adunk át, a paraméter át fog konvertálódni pointerré. Az, hogy miért tehetjük meg mégis, hogy egy tömböt írunk oda mégis pointert kapunk, 
+	Ebben az esetben még mindig 8 lesz a második kiírt szám. Az a tanulság, hogy ha érték szerint akarunk átadni egy tömböt, ahelyett át fog konvertálódni pointerré. Az, hogy ezt szintaktikailag miért tehetjük meg mégis, hogy egy tömböt írunk oda mégis pointert kapunk, 
 	\begin{center}
 		\textit{,,az egy faszság.''}
 		
 		/Horváth Gábor/
 	\end{center}
-	Van egy ismert módszer arra, hogy egy tömb méretét megkapjuk:
+	\begin{note}
+		Tömböt értékül adni a szabvány szerint nem is lehet: \texttt{int *t2[5] = t} nem helyes.
+	\end{note}
+	Van egy ismert módszer arra, hogy egy tömb méretét (elemszámát) megkapjuk:
 	\begin{lstlisting}
 #include <iostream>
 
-void f(int *t, int size)
+void f(int *t, int size) //uj parameter!
 {
 	std::cout << sizeof(t) << std::endl;
 }
@@ -150,7 +156,7 @@ int main()
 	\begin{note}
 		Amennyiben c++11ben programozunk, érdemes az \texttt{std::array}-t használnunk, ami majdnem ugyanaz, mint egy tömb, legalább olyan hatékony, de nem tud pointerré változni és mindig tudja a méretét.
 	\end{note}
-	Amennyiben egy tömre mutató mutatót csinálunk, akkor nem veszik el a mérete feltétlenül. Azonban figyelni kell a szintaktikára: \texttt{int *t[5]} ez egy olyan tömb lesz, melyre intre mutató mutatók lesznek.
+	Ha szeretnénk egy tömböt egy darab paraméterrel átadni, megpróbálhatunk egy tömbre mutató pointert létrehozni. Azonban figyelni kell a szintaktikára, ha \texttt{int *t[5]}-t írunk, egy öt elemű intre mutató pointereket tároló pointert kapunk.
 	
 	\medskip
 	Ha valóban tömbre mutató mutatót szeretnék, így csinálhatjuk:
@@ -173,14 +179,15 @@ int main()
 	g(b); //ok
 }
 	\end{lstlisting}
-	\section{Referenciák.}
+	\section{Referencia szerinti paraméter átvétel}
+	Megállapítható, hogy amikor mutatókkal dolgoztunk előző órán, akkor nem változtattuk meg azt, hogy mire mutassanak a pointerek, így azokat konstansként is definiálhatnánk.
 	\begin{lstlisting}
 void swap(int * const a, int * const b)
 {
 	//...
 }
 	\end{lstlisting}
-	Megállapítható, hogy amikor mutatókkal dolgoztunk előző órán, akkor nem változtattuk meg azt, hogy mire mutassanak a pointerek, így azokat konstansként is definiálhatnánk.
+	Egy kis szintaktikai cukorkával megúszhatjuk azt, hogy folyton kiírjuk a \texttt{* const}-ot (lévén ritkán akarjuk megváltoztatni hogy a tömb hova mutasson). Erre való a {referencia szerinti paraméter átváétel} (\textit{pass by reference}). A referencia úgy működik, mintha egy konstans pointer lenne.
 	\begin{lstlisting}
 void swapRef(int &a, int &b)
 {
@@ -188,34 +195,35 @@ void swapRef(int &a, int &b)
 	a = b;
 	b = tmp;
 }
-	\end{lstlisting}
-	Ezzel a kis szintaktikai cukorkával azt, hogy folyton kiírjuk a csillagot. A referencia úgy működik, mintha egy konstans referencia lenne. Ez a két függvény lényegében ekvivalensek. Egy referenciát nem állíthatunk másra. Különbség továbbá, hogy egy pointer lehet nullpointer, de egy referencia nem lehet sose null.
+	\end{lstlisting} 
+	Ez a két függvény lényegében ekvivalensek. A különbség a referencia és a pointer között csupán annyi, hogy egy referencia nem lehet null.
 	\begin{note}
-		Ez bár referencia szerinti átvétel, de it is történik másolás, a memóriacímet így is érték szerint vesszük át.
+		Ez bár ez referencia szerinti átvétel, de itt is történik másolás, a memóriacímet így is érték szerint vesszük át.
 	\end{note}
-	Megjegyzendő, hogy a fenti \texttt{swapRef} függvénynek nem kell memóriacímeket átadni, \texttt{swapRef(c,d)} teljesen jó.
+	Megjegyzendő, hogy a fenti \texttt{swapRef} függvénynek nem kell memóriacímeket átadni, \texttt{swapRef(a,b)}-t kell írnunk.
 	\begin{note}
 		Egy referenciát mindig inicializálni kell. Csak úgy mint egy konstanst (különben fordítási hibát kapunk.)
 	\end{note}
-	\section{Karakterláncok.}
-	\begin{lstlisting}
-#include <iostream>
-
-int main()
-{
-	char *hello = "Hello";
-}
-	\end{lstlisting}
-	Ez egy konstans karakterekből álló 6 méretű tömb. (\texttt{const char[6]})
+	\section{Karakterláncok}
+	Mi lesz a \texttt{"Hello"} sztring típusa?
+	\smallskip
+	
+	Egy konstans karakterekből álló 6 méretű tömb (\texttt{const char[6]}). Azért nem 5 elemű, mert a sztring el végén el kell tárolni a végét jelző \texttt{\textbackslash 0} karaktert.
 	
 	\begin{center}
 		\begin{tabular}{|c|c|c|c|c|c|}
 			\hline
-			H&E&L&L&O&$\backslash$n\\
+			H&E&L&L&O&$\backslash$0\\
 			\hline
 		\end{tabular}
 	\end{center}
-	Ez, amikor átkonvertálódik, egy konstans mutatóra kéne konvertálódnia. Ennek ellenére, a fenti kód lefordul, pedig \texttt{hello} egy nem konstansra mutató pointer. Ez azért van, mert az eredeti C-ben nem volt konstans kulcsszó. Ezért, a kompatibilitás végett c++ban lehet egy nem konstans karakterre mutatni. 
+	\begin{lstlisting}
+int main()
+{
+	char* = "Hello";
+}
+	\end{lstlisting}
+	A fenti kódban megsértettük a konstans korrektséget, hisz egy nem konstans pointerrel mutatuk egy konstans sztringre. Ennek ellenére, a fenti kód lefordul. Ez azért van, mert az eredeti C-ben nem volt konstans kulcsszó, és a kompatibilitás végett c++ban lehet konstans karaktertömbre nem konstans pointerrel mutatni.
 	\begin{note}
 		Ez egy nagyon rossz dolog, és kerülni kell, amennyire csak lehet. Lefordul, de kapunk rá warningot.
 	\end{note}
@@ -226,28 +234,25 @@ int main()
 	hello[1] = o;
 }
 	\end{lstlisting}
-	Ez azért kerülendő nagyon, mert sérti a konstans korrektséget. Ha eljátszom azt a trükköt, hogy az egyik elemet o-ra cserélem, akkor nem definiált viselkedést kapok. 
+	Ha eljászuk azt, hogy az egyik elemet o-ra cseréljük, akkor nem definiált viselkedést kapunk. 
 	
-	Futtatáskor (legalábbis ebben az esetben, hisz nem definiált viselkedésről van szó) futási idejű hibát kapunk, szegmentálási hibát. Ennek a magyarázata az, hogy van a gépünknek sima és virtuális memóriája is. Megfigyelhető, hogy sokkal több memóriát tudunk használni, mint amennyi ténylegesen van. Ez úgy oldható meg, hogy a virtuális memórián az alkalmazásunk kap egy memóriaterületet a memóriában, és ez leképződik a virtuális memóriára is. Vannak dolgok, melyek tudnak változni futási időben, és vannak olyanok, melyik változatlanok (például mi maga a programkód). Ezen külön vannak tárolva. Ha mi ezt a programot mégegyszer elindítjuk, a memóriában kapni fog egy újabb színteret a program, amiben benne lesznek az adatoki, melyeket futási időben módosíthat, illetve azok amiket nem. Az operációs rendszerünk azonban van olyan okos, hogy nem rakja be a nem módosíthatókat még egyszer, a nem változtatható kódot a 2 külön működő azonos program ugyanarra a részére fogja irányítani a virtuális memóriában.
+	Futtatáskor (legalábbis ebben az esetben, hisz nem definiált viselkedésről van szó) futási idejű hibát kapunk, méghozzá szegmentálási hibát. Ennek a magyarázata a követekző: van a gépünknek sima és virtuális memóriája. Megfigyelhető, hogy sokkal több memóriát tudunk használni, mint amennyi ténylegesen van. Ez úgy oldható meg, hogy a virtuális memórián az alkalmazásunk kap egy memóriaterületet. Ezen a memóriacímen vannak olyan adatok is, melyek garantáltan nem változnak: a program kódja, és a fenti \texttt{"Hello"} szint is ilyen. Ezek külön vannak tárolva azok adatoktól, melyek változhatnak. 
+	
+	Ha ezt a programot mégegyszer elindítjuk, a memóriában kapni fog egy újabb színteret a program, amiben benne lesznek az adatok, melyeket futási időben módosíthat, illetve azok amiket nem. Az operációs rendszerünk azonban van olyan okos, hogy nem rakja be a nem módosítható adatokat még egyszer: a nem változtatható kódot a 2 külön működő azonos program ugyanarra a részére fogja irányítani a virtuális memóriában.
 	
 	\medskip
 	Erre jó példa az, hogy a C-nek a standard könyvtárait közel minden program használja, így olcsóbb úgy megoldani, hogy minden programot ugyanide mutat.
 	
 	\medskip
-	Miért kapunk szegmentálási hibát? A konstansok ezen nem módosítható részen belül vannak. Ha módosítanánk, akkor a másik program futása is változna. Az olyan programokat, amik ilyet próbálnak csinálni, szinte azonnal ki lesznek írva. Az operációs rendszernek ugyanis nagyon fontos az, hogy a programok egymást futását nem zavarják (\textit{szeparálja} őket).
+	Miért kapunk szegmentálási hibát? A konstansok ezen nem módosítható részen belül vannak. Ha módosítanánk, akkor a másik program futása is változna. Az olyan programokat, amik ilyet próbálnak csinálni, szinte azonnal ki lesznek írtva. Az operációs rendszernek ugyanis nagyon fontos az, hogy a programok egymás futását nem zavarják (\textit{szeparálja} őket).
 	
 	\medskip
-	Ez jól rámutat arra, hogy miért is nem jó az, ha a fenti hbát megengedjük.
-	\section{Objektumok mérete.}
-	\subsection{Literálok.}
-	Vannak primitív típusaink, ilyen például az \textit{int}. Például, ha veszünk egy \texttt{5} literált, annak a típusa \texttt{int}. Ha azt írjuk \texttt{5.}\ , az egy \texttt{double} lesz.
-	\begin{note}
-		Viszonylag kevés esetben éri meg \texttt{float}-ot használni \texttt{double} helyett. Modern CPU-k ugyanolyan hatékonyan dolgoznak mind a kettővel, így érdemesebb a pontosabbat választani. Ha GPU-t programozunk, akkor az például egy kívételes eset.
-		
-		Amennyiben azt írom hogy \texttt{5.f}, akkor egy \texttt{float}-tá konvertálja a literálomat.
-		\begin{center}
-			
-		\begin{tabular}{c|l}
+	Ez jól rámutat arra, hogy miért is nem jó az, ha a fenti hibát megengedjük.
+	\section{Literálok}
+	Függően attól hogy egy számot hogyan írunk c++ban, mást jelenthet:
+	\begin{center}
+		\begin{tabular}{|c|l|}
+			\hline
 			5&\texttt{int}\\
 			\hline
 			5.&\texttt{double}\\
@@ -269,20 +274,23 @@ int main()
 			5u&\texttt{unsigned int}\\
 			\hline
 			5ul&\texttt{unsigned long int}\\
+			\hline
 		\end{tabular}
 		\end{center}
+	\begin{note}
+		Alapértelmezetten minden \texttt{int} egy \texttt{signed int}.
 	\end{note}
 	\begin{note}
-		Alapértelmezetten mnden \texttt{int} egy \texttt{signed int}.
+		Viszonylag kevés esetben éri meg \texttt{float}-ot használni \texttt{double} helyett. Modern CPU-k ugyanolyan hatékonyan dolgoznak mind a kettővel, így érdemesebb a pontosabbat választani. (Ha magát a GPU-t programozzuk, az lehet egy kivétel.)
 	\end{note}
 	A \texttt{sizeof(char)} mindig 1-et ad vissza. A karakter mérete mindig az egység. A \texttt{sizeof} függvény azt adja vissza, hogy paraméterül megadott dolog mennyi \texttt{char} méretű. A kérdésre, hogy mennyi \texttt{sizeof(char)} mennyi, a válasz mindig 1, de hogy ezt valóban hány byte-on tároljuk, az már implementációfüggő.
 	\medskip
 	
-	Létezik c++ban egy \texttt{signed} kulcsszó. Ez eredetileg a char miatt volt, mert az is egész számokat tartalmazott, de azt nem definiálták külön, hogy a \texttt{char} lehessen vagy ne lehessen signed, ezért az, hogy egy adott platformon lehet-e az, az implementációfüggő.
+	Létezik c++ban \texttt{signed} kulcsszó, mely eredetileg a char miatt volt, mert az is egész számokat tartalmazott, de azt nem definiálták külön, hogy a \texttt{char} lehessen vagy ne lehessen signed, ezért az, hogy egy adott platformon lehet-e az, az implementációfüggő.
 	\begin{note}
-		Érdemes mindig \texttt{int}et használnunk, hacsak nincs jó okunk arra, hogy \texttt{short}-ot, vagy \texttt{long}.ot írjunk. Az \texttt{int}-re általában a leghatékonyabb a processzor.
+		Érdemes mindig \texttt{int}et használnunk, hacsak nincs jó okunk arra, hogy \texttt{short}-ot, vagy \texttt{long}-ot írjunk. Az \texttt{int}-el általában a leghatékonyabb a processzor.
 	\end{note}
-	\subsection{Struct mérete.}
+	\subsection{Struktúrák mérete}
 	\begin{lstlisting}
 #include <iostream>
 
@@ -300,7 +308,7 @@ int main()
 	std::cout << sizeof(Hallgato) << std::endl;
 }
 	\end{lstlisting}
-	Itt, ezen a gépen a \texttt{double} mérete 8, az \texttt{int} mérete 4, \texttt{Hallgato}-é 4. Ezen azt látjuk, hogy a \texttt{Hallgato} tiszta adat.
+	Itt, ezen a gépen a \texttt{double} mérete 8, az \texttt{int} mérete 4, \texttt{Hallgato}-é 16. Ezen azt látjuk, hogy a \texttt{Hallgato} tiszta adat.
 	\begin{lstlisting}
 struct Hallgato
 {
@@ -309,7 +317,7 @@ struct Hallgato
 	int magassag;
 }
 	\end{lstlisting} 
-	Amikor ennek a méretét kérdezzük le (figyeljük meg, hogy változott a sorrend), akkor a válasz már 24. Ennek az oka az, hogy így volt letárolva ez a memóriában: (ne feledjük, ez még mindig implementációfüggő!)
+	Amikor ennek a méretét kérdezzük le (figyeljük meg, hogy változott a sorrend), akkor a válasz már 24. Ennek az oka az, hogy míg az első esetben így volt eltárolva a memóriában: (ne feledjük, ez még mindig implementációfüggő!)
 	\begin{center}
 		\begin{tabular}{|c||c|c|}
 			\hline
@@ -334,11 +342,15 @@ struct Hallgato
 		\end{tabular}
 	\end{center}
 	Ez így sokkal hatékonyabb, bár 3 gép szót használ. Ebben az esetben a kód eltárolja, hogy legyen egy kis \textit{padding } a változó után. Tehát semmi extráért nem kell fizetnünk, de attól még picit több memóriát foglalunk le.
+	\smallskip
 	
-	\begin{note}
-		A szabvány kimondja, hogy egy \texttt{struct} mérete az adottagok méreteinek összegénél nagyobbegyenlő.
-	\end{note}
-	Az, hogy egy gép szó mekkora, implementációfüggő.
+	A szabvány kimondja, hogy egy \texttt{struct} mérete az adottagok méreteinek összegénél nagyobbegyenlő.
+	\smallskip
+	
+	Az, hogy egy gépi szó mekkora, implementációfüggő.
+	\bigskip
+	
+	Egy \texttt{struct} egyes adattagjaira így hivatkozhatunk:
 	\begin{lstlisting}
 int main()
 {
@@ -349,15 +361,22 @@ int main()
 	b.magassag = 3;
 }
 	\end{lstlisting}      
-	\section{Inicializáció.}
-	Ezek mint jól ismert műveletek. Megjegyzendő, hogy az adottagokra az adott adattag default konstruktora fog meghívódni, ebben az esetben minden adattag memóriaszemetet kap kezdésül.
+	\section{Inicializáció}
+	Amikor létrehozunk egy \texttt{Hallgato} típusú objektumot fentebb, akkor minden adattagjára meghívódik a default konstruktor (erről bővebben 6. gyakorlaton).
+	
+	\texttt{int}-ek alapértezetten memóriaszemetet kapnak.
 	\begin{lstlisting}
 int i;
 
-int main() {...}
+int main() 
+{
+	std::cout << i << std::endl;
+}
 	\end{lstlisting}   
-	Itt ha kiíratjuk \texttt{i}-t, 0-t fogunk kapni. Azaz a globális változók mindig 0-val inicializálódnak (legalábbis az \texttt{int}-ek). Ennek az az oka, hogy a globális változókat csak egyszer hozzuk létre a program futásakot, mely várhatóan nem sok munka. A stacken rengetegszer létre kell hozni változót, nem csak egyszer, így ott nem éri meg minden alkalommal egy jól definiált kezdőértékkel inicializálni. Sokkal nagyobb lenne a hatása a futási időre.
+	Itt ha kiíratjuk \texttt{i}-t, mégis mindig 0-t fogunk kapni. Ennek oka az, hogy \texttt{i} egy globális változó, és a globális változók mindig 0-ra inicializálódnak (legalábbis az \texttt{int}-ek). A globális változókat csak egyszer hozzuk létre a program futásakot, így érdemes jól definiált kezdőértéket adni neki.
 	
-	A globálisokat azért 0-ra inicializálja, mert az nagyon gyors, és determinisztikus. Sokkal könnyebb kiszűrni így egy hibát, mert mindig tudom, hogy egy globális változó 0 értéket vesz fel alapértelmezetten.
+	 Azonban a stacken rengetegszer létre kell hozni változókat, nem csak egyszer, így ott nem éri meg minden alkalommal egy jól definiált kezdőértékkel inicializálni. Sokkal nagyobb lenne a hatása a futási időre.
+	
+	Az hogy miért épp 0-ra inicializálódnak, azért van, mert mert az nagyon gyors, és determinisztikus. Így hibákat is egyszerűbb kiszűrni, hisz egy globálisról mindig tudjuk hogy 0-ra inicializál alapértelmezetten.
 	
 \end{document}
