--- a/05gy_cpp/05gy_cpp.tex
+++ b/05gy_cpp/05gy_cpp.tex
@@ -545,6 +545,9 @@ int main()
 			\draw [arrow] (headNode) -- (7node);
 			\draw [arrow] (cHeadNode) -- (7node);
 		\end{tikzpicture}
+		\smallskip
+		
+		Zárójelben a lista első elemének \texttt{data} adattagjának értéke.
 	\end{center}
 	%}
 	
