--- a/06gy_cpp/06gy_cpp.tex
+++ b/06gy_cpp/06gy_cpp.tex
@@ -101,27 +101,12 @@
 		6. óra.
 	\end{center}
 	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
-	\section{Folytatás.}
-	Legutóbb az egyenlőségadás operátornál akadtunk el. Másoló konstruktorunk már van, de az értékadással még mindig lábon lőhetjük magunkat. Hasonlóan a default másoló konstruktorhoz, alapértelmezetten az értékadás operator is bitről bitre másol, így jobb ha felülírjuk.
+	\subsection{Értékadó operátor}
+	Másoló konstruktorunk már van, de az értékadással még mindig lábon lőhetjük magunkat. Hasonlóan a default másoló konstruktorhoz, alapértelmezetten az értékadás operátor (\textit{assignment operator}, vagy röviden \texttt{=}) is bitről bitre másol, így jobb ha felülírjuk.
 \begin{lstlisting}
 struct List
 {
-	List(int data, List *next = 0) : data(data), next(next) {}
-	~List()
-	{
-		delete next;
-	}
-	void add(int data)
-	{
-		if (next == 0)
-		{
-			next = new List(data);
-		}
-		else
-		{
-			next->add(data);
-		}
-	}
+	//...
 	
 	//copy constructor
 	List(const List &other) : data(other.data), next(0)
@@ -147,25 +132,40 @@ struct List
 		return *this;
 	}
 	
-	int data;
-	List *next;
+	//...
 };
 \end{lstlisting}
-	Itt az új értékadás operátorunk először kitörli az aktuális lista elemeit, majd rekurzív módon átmásolja \texttt{other} elemeit az aktuális listába.
+	Az új értékadás operátorunk először kitörli az aktuális lista elemeit, majd rekurzív módon átmásolja \texttt{other} elemeit az aktuális listába.
 	
 	Példaképp, a legelső lépés a \texttt{delete next;}-el az összes aktuális listaelem felszabadítása, majd addig hívjuk meg az értékadást rekurzívan, míg az \texttt{other} lista végére nem érünk (erre van az \texttt{if} ág), és ha elértünk oda, akkor zárjuk le az aktuális listát egy nullpointerrel. 
 	
-	Itt sikerült elérnünk, hogy ha lemásoljuk a listát, és a másolatot módosítjuk, az eredeti lista nem fog változni.
+	Sikerült elérnünk, hogy ha lemásoljuk a listát, és a másolatot módosítjuk, az eredeti lista nem fog változni.
 	\medskip
+	
+	Figyeljök meg, hogy referenciával tértünk vissza. Ennek oka az, hogy meg tukjuk tenni ezt:
+	\begin{lstlisting}
+			int a = b = c = d = 0; // a = (b = (c = (d = 0)))
+	\end{lstlisting}
+	Itt rendre \texttt{d}-t, \texttt{c}-t, \texttt{b}-t, \texttt{a}-t adjuk vissza, így egymásba fűzhetjük az értékadást.
+	\begin{note}
+		Miért nem konstans referenciával térünk vissza? Azért, mert nem tehetnénk meg ezt: (legyen \texttt{f} egy nem konstanst váró függvény) \texttt{f(a = 0)}.
+	\end{note}
 	
 	Írjunk egy egyszerűbb kiíratást is!
 	\begin{lstlisting}
-void print ()
+struct List
 {
-	std::cout << data << ' ';
-	if (next)
-		next->print();
-}
+	//...
+	
+	void print ()
+	{
+		std::cout << data << ' ';
+		if (next)
+			next->print();
+	}
+	
+	//...
+};
 	\end{lstlisting}
 	Nézzük meg mit műveltünk!
 	\begin{lstlisting}
@@ -180,7 +180,9 @@ int main ()
 	head.print();
 }
 	\end{lstlisting}
-	Azonban itt még mindig van egy nagy veszély. Ha a listát saját magának adjuk értékül, akkor a legelső lépés továbbra is az, hogy kitöröljük az aktuális lista elemét. így \texttt{cHead = cHead} megsemmisíti önmagát, és use-after-free hibát követnénk el. Persze mondhatnánk, hogy ki az a hülye, aki ilyen csinálja, de sajnos ezt a hibát könnyebb elkövetni mint gondolnánk.
+	Kimenet: \texttt{7 8 2}
+	
+	Azonban itt még mindig van egy nagy veszély. Ha a listát saját magának adjuk értékül, akkor a legelső lépés továbbra is az, hogy kitöröljük az aktuális lista elemét. így \texttt{cHead = cHead} megsemmisíti önmagát, és use-after-free hibát követnénk el, amikor a destruktor lefut. Persze mondhatnánk, hogy ki az a hülye, aki ilyen csinálna, de sajnos ezt a hibát könnyebb elkövetni mint gondolnánk.
 	\begin{lstlisting}
 void f(List &l1, List &l2)
 {
@@ -189,7 +191,7 @@ void f(List &l1, List &l2)
 	//...
 }
 	\end{lstlisting}
-	Ha valaki ugyanazt a listát adja meg mindkét paraméternek, akkor máris megvan a baj. Így módosítsuk az értékadás operátorunkat:
+	Ha valaki ugyanazt a listát adja meg mindkét paraméternek, akkor máris megvan a baj. Módosítsuk az értékadás operátorunkat:
 \begin{lstlisting}
 List& operator=(const List &other)
 {
@@ -206,17 +208,9 @@ List& operator=(const List &other)
 	return *this;
 }
 \end{lstlisting}
-	Ezzel a probléma el is lett kerülve. (\texttt{this} az aktuális lista memóriacíme, \texttt{\& other} a másiké)
+	Ezzel a probléma el is lett kerülve. Újdonság lehet a \texttt{this} kulcssszó -- ennek segítségével tudunk rámutatni tagfüggvényen belül az adott objektumra. Segíthet a megértésben, ha úgy tekintünk rá, hogy \texttt{head.print()} esetében például sehogyse tudnánk \texttt{print()}-en belül \texttt{head}-re hivatkozni, hisz az objektum neve tagfüggvényen belül nem elérhető. Ezt a problémát hivatott a \texttt{this} kulcsszó orvosolni. \texttt{this} egy konstans pointer, mely az objektum címére mutat.
 	\medskip
-	
-	Azért térünk vissza referenciával, hogy megtehessük ezt:
-	\begin{lstlisting}
-int a = b = c = d = 0; // a = (b = (c = (d = 0)))
-	\end{lstlisting}
-	Itt rendre \texttt{d}-t, \texttt{c}-t, \texttt{b}-t, \texttt{a}-t adjuk vissza, így egymásba fűzhetjük az értékadást.
-	\begin{note}
-		Miért nem konstans referenciával térünk vissza? Azért, mert nem tehetnénk meg ezt: (legyen \texttt{f} egy nem konstanst váró függvény) \texttt{f(a = 0)}.
-	\end{note}
+
 	Sikeresen létrehoztunk egy \textit{reguláris típust}.
 	\begin{definition}
 		Egy \texttt{T} típus \textbf{reguláris típus}, ha van neki:
@@ -239,6 +233,7 @@ T a = b;
 			\item egyenlőségvizsgálat (\texttt{operator==}) (nem feltétlenül szükséges)
 		\end{enumerate}
 	\end{definition}
+	\subsection{Adattagok védettsége}
 	Már majdnem készen vagyunk, ám a hülye felhasználó még mindig lábon lőheti magát, pl így:
 	\begin{lstlisting}
 int main()
@@ -249,7 +244,7 @@ int main()
 	head.next = 0;
 }
 	\end{lstlisting}
-	Itt az első listaelem utáni elemeket lecsatoljuk, és azoknak a memóriája elszivárog. A baj probléma az, hogy a \textbf{felhasználó hozzáfér az adattagokhoz.} A felhasználó vagy hülyeséget csinálhat, vagy pedig ha valaki átírja a listánkat, akkor a felhasználónak is át kell. Példaképp, ha a \texttt{List} \texttt{next} adattagjának új nevet adunk, akkor át kéne írni minden olyan kódot ami \texttt{next}re hivatkozik.
+	Itt az első listaelem utáni elemeket lecsatoljuk, és azoknak a memóriája elszivárog. A baj probléma az, hogy a \textbf{felhasználó hozzáfér az adattagokhoz.} A felhasználó így nagy hülyeséget csinálhat, továbbá ha gyakran hivatkozik belső adattagokra, egyéb baja is lehet. Példaképp, ha a \texttt{List} \texttt{next} adattagjának új nevet adunk, akkor át kéne írni minden olyan kódot ami \texttt{next}re hivatkozik.
 	
 	Jó lenne, ha hiába változna a belső reprezentáció, a kódnak nem kéne változnia. 
 	
@@ -268,10 +263,12 @@ private:
 	List *next;
 };
 \end{lstlisting}
-	A \texttt{class} majdnem ugynaz mint a \texttt{struct}, csak alapértelmezetten a \texttt{struct} minden adattagja és tagfüggvénye publikus, míg \texttt{class}-nak alapértelmezetten nem. A \texttt{public} ill. \texttt{private} kulcsszóval mind a kettőnél szabályozhatjuk a privát és publikust részt.
+	Az osztály minden adattagja, metódusa mely a \texttt{public} kulcsszó után jön, elérhető bárki számára. A \texttt{private} kulcsszó után következő adatok csak is kizárólag az adott osztályon belül érhető el (nemsokára megismerkedünk egy kivétellel).
+
+	A \texttt{class} majdnem ugynaz mint a \texttt{struct}, csak alapértelmezetten a \texttt{struct} minden adattagja és tagfüggvénye publikus, míg \texttt{class}-nak alapértelmezetten privát. A \texttt{public} ill. \texttt{private} kulcsszóval mind a kettőnél szabályozhatjuk a privát és publikust részt.
 	
 	\medskip
-	Mi a baj? Például az, hogy így sose tudunk hozzáférni a mások elemhez kívülről. Vagy bármelyik másikhoz. Ilyenkor megoldás lehet az, ha módosítjuk a listát, és minden olyan függvényt,  aminek hozzá kéne férnie az elemekhez, metódussá tesszük, hisz a lista metódusai hozzáférnek a privát adattagokhoz is.
+	Azonban van egy igen nagy probléma, ami ennek a módosításnak a követekzménye lett. Például az, hogy így sose tudunk hozzáférni a második elemhez kívülről. Vagy bármelyik másikhoz. Ilyenkor megoldás lehet az, ha módosítjuk a listát, és minden olyan függvényt,  aminek hozzá kéne férnie az elemekhez, metódussá tesszük, hisz a lista metódusai hozzáférnek a privát adattagokhoz is.
 	
 	Najó, ezt minden egyes függvénnyel lehet nem akarjuk megtenni. A végén egy kilóméter implementációnk lenne, ami nagyon rontaná az olvashatóságot.
 	
@@ -312,13 +309,7 @@ private:
 	Figyeljük meg, hogy \texttt{Current()} referenciával tér vissza, hogy ne \texttt{data} másolatát, hanem magát a \texttt{data}-t kapjuk meg, így tudjuk a lista értékét módosítani.
 	
 	\medskip
-	Itt minden alap dolog (pl. listaelemek összeadása) működik. De nem minden.
-	\begin{center}
-		\textit{,,Tényleg ezt tanították?''}
-			
-			/Horváth Gábor/
-	\end{center}
-	De egy rendezésnél már bajban lehetünk. Például csak 1 darab kurzorunk van, így nem tudunk egyszerre 2 elemhez hozzáférni, lévén csak egy \texttt{cursor} van. Megoldás!:
+	Első látásra a problémát orvosoltuk, tudunk a listákkal tárolt adatokkal dolgozni (pl. összeadni őket, stb). De egy rendezésnél már bajban lehetünk. Például csak 1 darab kurzorunk van, így nem tudunk egyszerre 2 elemhez hozzáférni, hogy összehasonlítsuk őket, lévén csak egy \texttt{cursor} van. Megoldás!:
 \begin{lstlisting}
 class List
 {
@@ -365,13 +356,14 @@ private:
 	List *cursor2;
 };
 \end{lstlisting}
-	Najó, ez viccenk talán jó, de könnyű látni, ha mondjuk 3 darab \texttt{cursor} kéne, akkor bajba lennénk, és hosszútávon nem ez a jó hozzáállás. Ez nem elég ahhoz, hogy komplex feladatokat meg tudjunk írni. \textbf{Munkahelyen ilyet ne írjunk!} Töröljük is ki gyorsan, és írjunk egy iterátort!
+	Oké, ez viccnek talán jó, de könnyű látni, ha mondjuk 3 darab \texttt{cursor} kéne, akkor bajba lennénk, és hosszútávon nem ez a jó hozzáállás. Ez nem elég ahhoz, hogy komplex feladatokat meg tudjunk írni. \textbf{Munkahelyen ilyet ne írjunk!} Töröljük is ki gyorsan, és írjunk egy iterátort!
 	\subsection{Iterátorok.}
-	Az iterátorok a pointerek általánosítása, segítségükel tudunk végigiterálni egy konténer elemein.
+	Az iterátorok a pointerek általánosítása, segítségükel tudunk végigiterálni egy konténer elemein (azaz velük tudjuk lekérdezni a konténer elemeit). Ehhez szükségünk van arra, hogy tudjuk hol kezdődik és végződik a konténerünk. E láncolt lista esetében hozzá tudunk férni az első elemhez (az lesz ugye \texttt{head} a fenti példákban) és tudjuk hogy mindig nullpointerrel végződik. Legyen az iterátunk neve \texttt{Iterator}!
 \begin{lstlisting}
 class List
 {
 	//...
+public:
 	Iterator begin()
 	{
 		return Iterator(this);
@@ -382,7 +374,7 @@ class List
 	}
 };
 \end{lstlisting}
-	Most egy forward iterárotrt fogunk írni.
+	E két metódus segítségével már meg tudjuk adni a lista elejét és végét! \texttt{head.begin()} lesz \texttt{head} a legelső eleme, \texttt{head.end()} az utolsó utáni elem. Már csak magát az iterátort kell megírni, mely egy un. \textit{forward iterator} lesz.
 	\begin{definition}
 		Egy \texttt{T} típus \textbf{forward iterator}, ha rendelkezik:
 		\begin{enumerate}
@@ -392,7 +384,7 @@ class List
 			\item dereferáló operátorral \texttt{*}
 		\end{enumerate}
 	\end{definition}
-	Írjuk is meg az \texttt{Iterator} osztályunkat. De azt hova tegyük? Hiszen ha a lista elé tesszük, az \texttt{Iterator} nem fogja tudni, hogy mi az a \texttt{List}. Ha utána tesszük, nem fogja tudni a \texttt{List} hogy mi az az \texttt{Iterator}, úgy meg nem műküdne az \texttt{end} és a \texttt{begin} metódus. Ehhez \textbf{forward deklarálni} fogunk, amikor megmondjuk a fordítónak, hogy nem kell megijedni (kifejtés a kód után).
+	De hova írjuk az \texttt{Iterator} osztályt? Hiszen ha a lista elé tesszük, az \texttt{Iterator} nem fogja tudni, hogy mi az a \texttt{List}. Ha utána tesszük, nem fogja tudni a \texttt{List} hogy mi az az \texttt{Iterator}, úgy meg nem műküdne az \texttt{end} és a \texttt{begin} metódus. Ehhez \textbf{forward deklarálni} fogunk.
 	\begin{lstlisting}
 class List; //forward declaration
 
@@ -410,12 +402,12 @@ public:
 	}
 	//...
 private:
-	List *p;
+	List *p; //(*)
 };
 
 class List {//...};
 	\end{lstlisting}
-	Itt a fordító arra számít, hogy majd \texttt{List} később definiálva lesz majd rendesen.
+	A fordító már a csillagozott sornál nem fog problémázni, hogy nem tudja mi az a \texttt{List} - arra számít hogy valamikor (akár egy másik fordítási egységben) \texttt{List} definiálva lesz. Amennyiben nem akarjuk dereferálni \texttt{p}-t, elég csupán a forward deklarálni, ki sem kell fejtenünk az osztály bővebben később!
 	
 	\medskip
 	Még hiányzik a \texttt{++} és a \texttt{*} operátorunk.
@@ -449,7 +441,7 @@ private:
 
 class List {//...};
 \end{lstlisting}
-	Jajj, itt bajban vagyunk. A fordító siránkozik, hogy a \texttt{List} egy un. \textit{incomplete type}. Ugyanis az tudja hogy van osztály hogy \texttt{List}, de az, hogy \texttt{next} adattag, nem tudja micsoda. Ezért ezeket a tagfüggvényeket a lista után kell írni.
+	És itt az előbb említett problémába bele is ütköztünk: a fordító siránkozik, hogy a \texttt{List} egy un. \textit{incomplete type}. Ugyanis az tudja hogy van osztály hogy \texttt{List}, de az, hogy \texttt{next} adattag, nem tudja micsoda. Ezért ezeket a tagfüggvényeket a lista után kell írni.
 \begin{lstlisting}
 class List;
 
@@ -483,7 +475,7 @@ int& Iterator::operator*()
 	return p->data;
 }
 \end{lstlisting}
-	Itt még mindig hisztizni fog a fordító: \texttt{next} és \texttt{data} annyira private, hogy még az \texttt{Iterator} se fér hozzá! Erre megoldás, hogyha \texttt{barát} (\texttt{friend}) osztállyá tesszük, és úgy már rálát.
+	Itt még mindig hisztizni fog a fordító: \texttt{next} és \texttt{data} annyira private, hogy még az \texttt{Iterator} se fér hozzá! Erre megoldás, hogyha \textbf{barát} (\textit{friend}) osztállyá tesszük.
 	\begin{lstlisting}
 class List
 {
@@ -492,7 +484,10 @@ class List
 	//...
 }
 	\end{lstlisting}
-	Az így kapott iterátorunkkal végig tudunk menni a lista elemein, hozzá tudunk férni az adattagjainkhoz. Így már azt is megtehetjük, hogy \texttt{print()}-et tagfüggvény helyett sima globális függvénnyé tesszük.
+	A barátként deklarált osztályok és függvények hozzá tudnak férni az osztály privát adattagjaihoz is.
+	
+	\smallskip
+	Az így kapott iterátorunkkal végig tudunk menni a lista elemein, hozzá tudunk férni az adattagjaihoz. Így már azt is megtehetjük, hogy \texttt{print()}-et tagfüggvény helyett sima globális függvénnyé tesszük.
 	\begin{lstlisting}
 void print(List &l)
 {
@@ -509,9 +504,9 @@ void print(List &l)
 	Megint nyertünk! Annyi \texttt{Iterator}-t hozunk létre, amennyit csak akarunk, nem vagyunk korlátozva egy darab \texttt{cursor} által. Továbbá, elég azt írni, hogy \texttt{.begin(), .end()}, nem kell tudnunk, mi van az implementáció mélyén, \textbf{sőt}, a belső implementáció változhat is, akkor se lesz baj. Két programozó így teljesen jól együtt tud dolgozni.
 	
 	\medskip
-	Dehát, nyilván, nyilván nincs még vége. Még szép hogy. Hiszen a \texttt{print} függvény paramétere nem \texttt{const}! És ha ezt az apró módosítást megtesszük, akkor olyat mond nekünk a fordító, amit a legnagyobb ellenségünk se tenne. Hisz az, amit az \texttt{end} és \texttt{begin} visszaad, nem konstans, ezeken keresztül tudjuk módosítani az objektumot. Valahogy törekednünk kéne arra, hogy a konstans korrektséget betartsuk.
-	\subsection{Konstans iterátorok.}
-	Erre a megoldás, ha konstans iterátort írunk.
+	Megfigyelhető, hogy \texttt{print} nem módosítja a paraméterként kapott listát, így átvehetnénk konstansként is. Ennek az eredménye egy kilóméter fordítási hiba: amit az \texttt{end} és \texttt{begin} visszaad, nem konstans, azaz ezeken keresztül tudjuk módosítani az objektumot. Valahogy törekednünk kéne arra, hogy a konstans korrektséget betartsuk.
+	\subsection{Konstans iterátorok}
+	Erre a megoldás, ha konstans iterátort írunk, ami egy konstansra mutató mutató általánosítása.
 \begin{lstlisting}
 class List;
 
@@ -524,7 +519,7 @@ class ConstIterator
 {
 public:
 	Const Iterator(const List *_p) : p(_p) {}
-	bool operator==(ConstIterator &other) const
+	bool operator==(ConstIterator &other) const //a metodus konstans!
 	{
 		return p == other.p;
 	}
@@ -533,9 +528,9 @@ public:
 		return !(*this == other);
 	}
 	Iterator operator++();
-	int operator*(); const //nem referencia!
+	int operator*(); const //nem referenciaval ter vissza!
 private:
-	const List *p;
+	const List *p; //konstanra mutato pointer!
 };
 
 class List
@@ -565,12 +560,12 @@ int Iterator::operator*() const
 	return p->data;
 }
 \end{lstlisting}
-	Azon a metódusok, ami után \texttt{const} van írva (ld. fenti példa) nem tudják megváltoztatni az osztály adattagjait. Egy konstans objektumon csak akkor lehet meghívni egy metódust, ha az a metódus konstans.
+	Azon a metódusok, amik után \texttt{const} van írva (ld. fenti példa) nem tudják megváltoztatni az osztály adattagjait. Ezeket a metódusokat \textbf{konstans metódusok}nak (\textit{const method}) hívják. Egy konstans objektumon csak akkor lehet meghívni egy metódust, ha az a metódus konstans.
 	\begin{note}
 		Ami lehet \texttt{const}, az \textbf{legyen} \texttt{const}!
 	\end{note}
 
-	A \texttt{const List} alapértelmezetten a konstans függvényt fogja meghívni, és egy nem \texttt{const} a sima \texttt{Iterator}-hoz tartozót. Érdemes egyébként minden metódust, mely nem változtatja az adattagokat konstansként megírni. 
+	Egy \texttt{const List} típusú objektum a konstans függvényt fogja meghívni, így \texttt{begin()} visszatérési értékének típusa \texttt{ConstIterator} lesz, míg egy nem konstans \texttt{List} objektumnál \texttt{Iterator} lenne. Érdemes egyébként minden metódust, mely nem változtatja az adattagokat konstansként deklarálni. 
 	\begin{lstlisting}
 int main()
 {
@@ -578,11 +573,11 @@ int main()
 	head.add(7);
 	head.add(2);
 	{
-		ConstIterator cit = it.begin();
+		ConstIterator cit = it.begin(); //hiba
 	}
 }
 	\end{lstlisting}
-	Itt két különböző típust nem tudunk egymásnak értékül adni, így írjunk egy új konstruktort.
+	Két különböző típust nem tudunk egymásnak értékül adni, azonban ez a két típus közel megyezik, így egy új konstrukorral ezt könnyen tudnánk orvosolni.
 	\begin{lstlisting}
 class ConstIterator
 {
@@ -594,7 +589,7 @@ public:
 	\end{lstlisting}
 	Itt már csak annyi probléma lesz, hogy \texttt{Iterator}-nak a \texttt{p} adattagja privát. Így tegyük ezt a két osztályt baráttá!
 	
-	Azonban az meglepő lehet, hogy ez a kód lefordul. Hiszen \texttt{head.begin()} egy \texttt{Iterator}-t ad vissza, hiszen \texttt{head} nem konstans! Ezt a fordító úgy oldja meg, hogy az így kapott \texttt{Iterator} típusú változóval használja a \texttt{CosntIterator} konstruktorát, ezzel \textit{implicit kódon átkonvertálja} \texttt{Iterator}-t \texttt{ConstIterator}-rá. Ezt megtilthatjuk a fordítónak, ha az \texttt{explicit} kulcsszót betesszük a konstruktor elé (és csak oda lehet tenni!).
+	Azonban az meglepő lehet, hogy ez a kód lefordul. Hiszen \texttt{head.begin()} egy \texttt{Iterator}-t ad vissza, hiszen \texttt{head} nem konstans! Ezt a fordító úgy oldja meg, hogy az így kapott \texttt{Iterator} típusú változóval használja a \texttt{ConstIterator} konstruktorát, ezzel \textit{implicit kódon átkonvertálja} \texttt{Iterator}-t \texttt{ConstIterator}-rá, és utána hívja meg a másoló konstruktort. Ezt megtilthatjuk a fordítónak, ha az \texttt{explicit} kulcsszót betesszük a konstruktor elé.
 \begin{lstlisting}
 class ConstIterator
 {
@@ -609,7 +604,7 @@ public:
 class List
 {
 	//...
-	explicit List(cosnt int _data, List *_next) : data(_data), next(_next) {}
+	explicit List(const int _data, List *_next) : data(_data), next(_next) {}
 	//...
 }
 	\end{lstlisting}
